# ecom

./: .gitignore  Pipfile  README.md  install-linux.sh  install-macos.zsh  install.sh  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: django.yml
arkcomputing/: asgi.py  settings.py  urls.py  wsgi.py
arkcomputing/settings/: dev.py  prod.py
custombuild/: admin.py  apps.py  models.py  urls.py  views.py
custombuild/templates/custombuild/: base.html
discord/: urls.py  views.py
discord/templates/discord/: base.html  discord.html
ecom/: admin.py  models.py  tests.py  urls.py  views.py
ecom/models/: __init__.py  cart.py  category.py  order.py  product.py
ecom/models/auth/: __init__.py  token.py  token_base.py  token_square.py
ecom/squareapi/: session.py
ecom/static/ecom/js/: main.js
ecom/templates/ecom/: base.html  cart.html  cart_list.html  cartitem_list.html  conditions.html  delete_product.html  detail.html  edit_product.html  footer.html  home.html  layout.html  navbar.html  order.html  order_list.html  part.html  privacy.html  product.html  product_detail.html  product_list.html  shop.html  shop_all.html
ecom/templates/ecom/partials/: cartitem_list.html  order_list.html  product_list.html
ecom/templates/ecom/partials/widgets/: carousel.html
ecom/tests/: cart.py
ecom/views/: __init__.py  cart.py  home.py  main.py  order.py  product.py  registration.py  search.py  shop.py  user.py
global_static/css/: main.css
src/: asgi.py  urls.py  wsgi.py
src/settings/: dev.py  prod.py  test.py
theme/static_src/: tailwind.config.js
