[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "crimsonslate-ecom"
description = "crimsonslate Django ecommerce app"
requires-python = ">= 3.12"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { name = "Blake Nall", email = "dev@darthnall.com" },
    { name = "Constantine Kapatos", email = "kapatos.constantine@gmail.com" },
]

[project.urls]
Homepage = "https://ecom.crimsonslate.com/demo"
Documentation = "https://github.com/crimsonslate/ecom/wiki"
Repository = "https://github.com/crimsonslate/ecom"

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".venv",
    "venv",
    ".vscode",
    "__pycache__",
    "node_modules",
    "site-packages",
    "dist",
    "build",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]
ignore = []
fixable = [ "ALL" ]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.setuptools.packages.find]
where = ["ecom"]
exclude = ["migrations*"]
